--- a/SomeChess/Pages/ChessPage.razor
+++ b/SomeChess/Pages/ChessPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/chess/{MatchID:int}"
+﻿@page "/chess/"
 @inject IJSRuntime JsRuntime
 @inject UserAuthentication social
 @using SomeChess.Components
