--- a/SomeChess/Pages/Index.razor
+++ b/SomeChess/Pages/Index.razor
@@ -9,8 +9,8 @@
 <div class="flex h-24 justify-center content-center items-center">
     <h1 class="font-bold text-5xl" style="color: var(--TextColor)">Die beste App für Schach!</h1>
 
-    <input id="newNameInput" style="margin-left: 20px" name="newNameInput" placeholder="Enter your nickname" @bind="@NewName"/>
-    <button id="submitName" style="margin-left: 20px; color: white; background-color: green; padding: 5px; font-size: 24px; border: 2px solid white; border-radius: 10px" @onclick="() => ChangeUsername()">Enter Name</button>
+    <input id="newNameInput" style="margin-left: 20px" name="newNameInput" placeholder="new name" @bind="@NewName"/>
+    <button id="submitName" style="margin-left: 20px; color: white; background-color: green; padding: 5px; font-size: 24px; border: 2px solid white; border-radius: 10px" @onclick="() => ChangeUsername()">Apply</button>
     @if(social.CurrentPlayer != null)
     {
         <label id="infoLabel" style="margin-left: 20px; color: white; font-size: 24px">@InfoText</label>
@@ -32,35 +32,39 @@
     {
         if(firstRender)
         {
-            await social.ClearBrowserUserDataAsync();
+            await social.UpdateCurrentPlayerAsync();
+            Console.WriteLine("Current user was updated");
+            InfoText = "Your name:";
+            StateHasChanged();
         }
     }
 
 
     public void ChangeUsername()
     {
-        Player? player = social.FetchPlayerAsync().Result;
+        Console.WriteLine("ChangeUsername() begins");
 
-        if(player == null)
+        try
         {
-            PlayerStorage storage = PlayerStorage.GetInstence();
-            if (storage.IsNameFree(NewName) && NewName != "")
+            Player? player = social.CreateNewPlayer(NewName).Result;
+
+            if (player == null)
             {
-                Player? newPlayer = social.CreateNewPlayer(NewName).Result;
-                if(newPlayer != null)
-                {
-                    social.PersistPlayerAsync(newPlayer);
-                }
-                InfoText = "Your new name is: ";
+                Console.WriteLine("user is null");
+                InfoText = "This name is already taken!";
+
             }
             else
             {
-                InfoText = "This name is already taken!";
+
+                social.PersistPlayerAsync(player);
             }
+
+            InfoText = "Your name: ";
         }
-        else
+        catch
         {
-            InfoText = "You are already logged in! Your name is:";
+            Console.WriteLine("Doesnt work");
         }
     }
 }
