--- a/SomeChess/wwwroot/css/output.css
+++ b/SomeChess/wwwroot/css/output.css
@@ -568,28 +568,40 @@ video {
   position: relative;
 }
 
-.mb-16 {
-  margin-bottom: 4rem;
+.bottom-0 {
+  bottom: 0px;
 }
 
-.mb-32 {
-  margin-bottom: 8rem;
+.bottom-72 {
+  bottom: 18rem;
 }
 
-.mb-36 {
-  margin-bottom: 9rem;
+.right-36 {
+  right: 9rem;
 }
 
-.mb-72 {
-  margin-bottom: 18rem;
+.right-56 {
+  right: 14rem;
 }
 
-.ml-12 {
-  margin-left: 3rem;
+.right-72 {
+  right: 18rem;
 }
 
-.ml-14 {
-  margin-left: 3.5rem;
+.right-80 {
+  right: 20rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.ml-0 {
+  margin-left: 0px;
 }
 
 .ml-16 {
@@ -600,36 +612,32 @@ video {
   margin-left: 6rem;
 }
 
-.ml-32 {
-  margin-left: 8rem;
-}
-
-.ml-52 {
-  margin-left: 13rem;
-}
-
-.ml-56 {
-  margin-left: 14rem;
-}
-
 .ml-8 {
   margin-left: 2rem;
 }
 
-.ml-80 {
-  margin-left: 20rem;
+.mt-0 {
+  margin-top: 0px;
 }
 
-.ml-96 {
-  margin-left: 24rem;
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
-.mr-0 {
-  margin-right: 0px;
+.mt-1\.5 {
+  margin-top: 0.375rem;
 }
 
 .mt-14 {
   margin-top: 3.5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
 }
 
 .mt-5 {
@@ -664,10 +672,6 @@ video {
   display: none;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
 .h-10 {
   height: 2.5rem;
 }
@@ -684,14 +688,6 @@ video {
   height: 6rem;
 }
 
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
 .h-5 {
   height: 1.25rem;
 }
@@ -700,16 +696,8 @@ video {
   height: 83.333333%;
 }
 
-.h-52 {
-  height: 13rem;
-}
-
-.h-64 {
-  height: 16rem;
-}
-
-.h-96 {
-  height: 24rem;
+.h-8 {
+  height: 2rem;
 }
 
 .h-screen {
@@ -720,61 +708,28 @@ video {
   width: 0.25rem;
 }
 
-.w-2 {
-  width: 0.5rem;
+.w-1\/2 {
+  width: 50%;
 }
 
-.w-24 {
-  width: 6rem;
+.w-1\/6 {
+  width: 16.666667%;
 }
 
 .w-3 {
   width: 0.75rem;
 }
 
-.w-3\/6 {
-  width: 50%;
-}
-
 .w-4 {
   width: 1rem;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-64 {
-  width: 16rem;
 }
 
 .w-96 {
   width: 24rem;
 }
 
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
-}
-
 .w-screen {
   width: 100vw;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .border-collapse {
@@ -783,6 +738,10 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .select-none {
@@ -797,10 +756,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
 }
 
 .place-content-evenly {
@@ -823,20 +778,24 @@ video {
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
+}
+
 .justify-evenly {
   justify-content: space-evenly;
 }
 
-.justify-self-center {
-  justify-self: center;
-}
-
-.overflow-scroll {
-  overflow: scroll;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-sm {
@@ -847,31 +806,15 @@ video {
   border-width: 1px;
 }
 
-.bg-black {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
+.from-orange-800 {
+  --tw-gradient-from: #9a3412 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(154 52 18 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .text-center {
@@ -893,53 +836,13 @@ video {
   line-height: 1;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .font-bold {
   font-weight: 700;
-}
-
-.text-blue-400 {
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
 }
 
 .text-gray-100 {
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity));
-}
-
-.text-green-400 {
-  --tw-text-opacity: 1;
-  color: rgb(74 222 128 / var(--tw-text-opacity));
-}
-
-.text-neutral-50 {
-  --tw-text-opacity: 1;
-  color: rgb(250 250 250 / var(--tw-text-opacity));
-}
-
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity));
-}
-
-.text-yellow-500 {
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -948,15 +851,6 @@ video {
 
 .outline {
   outline-style: solid;
-}
-
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.backdrop-filter {
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 #blazor-error-ui {
@@ -1041,12 +935,10 @@ video {
   background-color: #769656;
 }
 
+/*buttons*/
+
 .playOnline {
-  transition-duration: 0.25s;
-  transition-property: all;
-  transition-timing-function: ease;
   border-style: solid;
-  margin-top: 3vh;
   height: 10vh;
   width: 400px;
   border-radius: 15px;
@@ -1059,18 +951,6 @@ video {
   background-color: #72c21f;
 }
 
-.playOnline img, .playOnline span {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.playOnline img {
-  display: inline-block;
-  vertical-align: middle;
-  margin-top: 1.5vh;
-  margin-left: -5vw;
-}
-
 .playOnline span {
   margin-top: -9.5vh;
   margin-left: 1.5vw;
@@ -1078,9 +958,7 @@ video {
 }
 
 .playComputer {
-  transition-duration: 0.25s;
-  transition-property: all;
-  transition-timing-function: ease;
+  border-style: solid;
   height: 10vh;
   width: 400px;
   border-radius: 15px;
@@ -1089,27 +967,28 @@ video {
   background-color: #696969;
 }
 
-.playComputer img, .playComputer span {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.playComputer img {
-  display: inline-block;
-  vertical-align: middle;
-  margin-top: 1.5vh;
-  margin-left: -6vw;
-}
-
 .playComputer span {
   margin-top: -9.5vh;
-  margin-right: 1vw;
   font-size: 50%;
 }
 
 .playComputer:hover {
   background-color: #636363;
 }
+
+.textInButton {
+  width: 310px;
+}
+
+.playOnline button {
+  line-height: 0.8em;
+}
+
+.playComputer button {
+  line-height: 0.8em;
+}
+
+/*buttons*/
 
 .greengradient {
   font-size: 400%;
@@ -1239,4 +1118,47 @@ video {
 
 .d-block {
   display: block;
+}
+
+.pawnTransformationChoice {
+  right: 70.5%;
+  bottom: 57.5%;
+  transform: translate(77.5%, 5%);
+}
+
+.peaceChoiceHolder {
+  background-color: #32581f;
+}
+
+.peaceChoiceHolder img {
+  cursor: pointer;
+}
+
+.selector {
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.movesNotationHolder {
+  font-size: 120%;
+  color: white;
+}
+
+.movesNotationHolder:nth-child(even) {
+  background-color: #2c5d63;
+}
+
+.movesNotationHolder:nth-child(odd) {
+  background-color: rgb(25, 113, 74);
+}
+
+.drawButton {
+  background-color: #636363;
+}
+
+.giveUpButton {
+  background-color: red;
 }
