--- a/SomeChess/wwwroot/css/site.css
+++ b/SomeChess/wwwroot/css/site.css
@@ -78,12 +78,10 @@
 .blackCell {
     background-color: #769656; 
 }
+
+/*buttons*/
 .playOnline {
-    transition-duration: 0.25s;
-    transition-property: all;
-    transition-timing-function: ease;
     border-style: solid;
-    margin-top: 3vh;
     height: 10vh;
     width: 400px;
     border-radius: 15px;
@@ -94,25 +92,13 @@
     .playOnline:hover {
         background-color: #72c21f;
     }
-    .playOnline img, .playOnline span {
-        display: inline-block;
-        vertical-align: middle;
-    }
-    .playOnline img {
-        display: inline-block;
-        vertical-align: middle;
-        margin-top: 1.5vh;
-        margin-left: -5vw;
-    }
 .playOnline span {
     margin-top: -9.5vh;
     margin-left: 1.5vw;
     font-size: 50%;
 }
 .playComputer {
-    transition-duration: 0.25s;
-    transition-property: all;
-    transition-timing-function: ease;
+    border-style: solid;
     height: 10vh;
     width: 400px;
     border-radius: 15px;
@@ -120,25 +106,28 @@
     color: white;
     background-color: #696969;
 }
-    .playComputer img, .playComputer span {
-        display: inline-block;
-        vertical-align: middle;
-    }
-.playComputer img {
-        display: inline-block;
-        vertical-align: middle;
-        margin-top: 1.5vh;
-        margin-left: -6vw;
-    }
 .playComputer span {
         margin-top: -9.5vh;
-        margin-right: 1vw;
         font-size: 50%;
     }
     .playComputer:hover {
         background-color: #636363;
         
     }
+.textInButton {
+    width: 310px;
+}
+
+.playOnline button {
+    line-height: 0.8em;
+}
+
+.playComputer button {
+    line-height: 0.8em;
+}
+/*buttons*/
+
+
 .greengradient {
     font-size: 400%;
     background-image: linear-gradient(to right, rgb(182, 244, 146), rgb(51, 139, 147));
@@ -247,4 +236,39 @@
 }
 .d-block {
     display: block;
+}
+.pawnTransformationChoice {
+    right: 70.5%;
+    bottom: 57.5%;
+    transform: translate(77.5%, 5%);
+}
+.peaceChoiceHolder {
+    background-color: #32581f;
+}
+.peaceChoiceHolder img {
+    cursor: pointer;
+}
+.selector {
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+.movesNotationHolder {
+    font-size: 120%;
+    color: white;
+}
+    .movesNotationHolder:nth-child(even) {
+        background-color: #2c5d63;
+    }
+
+    .movesNotationHolder:nth-child(odd) {
+        background-color: rgb(25, 113, 74);
+    }
+    .drawButton {
+        background-color: #636363;
+    }
+.giveUpButton {
+    background-color: red;
 }
