--- a/SomeChess/Pages/ChessPage.razor
+++ b/SomeChess/Pages/ChessPage.razor
@@ -1,7 +1,12 @@
-﻿@page "/chess/"
+﻿@page "/chess/{MatchID:int}"
 @inject IJSRuntime JsRuntime
 @using SomeChess.Components
+@using Microsoft.AspNetCore.Components.Web
+@using SomeChess.Code.GameEngine.ChessImplementation
+@using SomeChess.Code.MatchMaking.ChessMatchImplementation
 @using SomeChess.Code.Social
+@using SomeChess.Code.MatchMaking
+@using SomeChess.Code
 @inject UserAuthentication social
 @inject NavigationManager NavigationManager
 
@@ -9,7 +14,7 @@
 
 </body>
 <div class="flex h-24 justify-center content-center items-center">
-    <h1 class="font-bold text-5xl" style="color: var(--TextColor)">bebebebe</h1>
+    <h1 class="font-bold text-5xl" style="color: var(--TextColor)">@(Name)</h1>
 </div>
 
 <ChessField></ChessField>
@@ -20,12 +25,22 @@
     [Parameter]
     public int MatchID { get; set; }
 
+    public string Name;
+
+
+    protected override async Task OnInitializedAsync()
+    {
+        await social.FetchPlayerAsync();
+        Name = social.CurrentPlayer.Name;
+        
+    }
+
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if(firstRender)
         {
-            await social.UpdateCurrentPlayerAsync();
+            
             if (social.CurrentPlayer == null)
             {
                 Console.WriteLine("Cannot fetch: user is null");
