--- a/SomeChess/Components/Chessboard.razor
+++ b/SomeChess/Components/Chessboard.razor
@@ -533,7 +533,7 @@
 }
 
 @code {
-    bool ChoicePeace = true;
+    bool ChoicePeace = false;
     bool GameOver = true;
     string GameWon = "white";
     bool NotNewGame = true;
@@ -611,7 +611,7 @@
     public ChessMatch CreateChessMatch(GameMode mode)
     {
 
-        ChessMatch newMatch = constructor.CreateMatch(social.CurrentPlayer, mode);
+        ChessMatch newMatch = constructor.CreateMatch(social.CurrentPlayer, mode, this);
         social.CurrentPlayer.PlayersMatch = newMatch.MatchID;
         MatchSearching.GetInstance().AddMatch(newMatch);
 
