--- a/SomeChess/wwwroot/css/output.css
+++ b/SomeChess/wwwroot/css/output.css
@@ -604,6 +604,10 @@ video {
   margin-left: 0px;
 }
 
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
 .ml-16 {
   margin-left: 4rem;
 }
@@ -692,10 +696,6 @@ video {
   height: 1.25rem;
 }
 
-.h-5\/6 {
-  height: 83.333333%;
-}
-
 .h-8 {
   height: 2rem;
 }
@@ -730,14 +730,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-3\/6 {
-  width: 50%;
-}
-
-.w-4\/5 {
-  width: 80%;
 }
 
 .border-collapse {
@@ -859,6 +851,22 @@ video {
 
 .outline {
   outline-style: solid;
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 #blazor-error-ui {
@@ -1122,6 +1130,7 @@ video {
 
 .move-history {
   overflow: scroll;
+  height: 53vh;
 }
 
 .d-block {
@@ -1164,9 +1173,31 @@ video {
 }
 
 .drawButton {
-  background-color: #636363;
+  color: white;
+  transition: all 0.7s;
+  width: 5vw;
+  font-size: 125%;
+  background-color: rgb(85, 165, 146);
+  border-radius: 4px;
+}
+
+.drawButton:hover {
+  transition: all 0.5s;
+  color: white;
+  background-color: rgb(113, 180, 132);
 }
 
 .giveUpButton {
-  background-color: red;
+  transition: all 0.7s;
+  color: white;
+  width: 5vw;
+  font-size: 125%;
+  background-color: rgb(85, 165, 146);
+  border-radius: 4px;
+}
+
+.giveUpButton:hover {
+  transition: all 0.5s;
+  color: white;
+  background-color: rgb(113, 180, 132);
 }
