--- a/SomeChess/wwwroot/css/site.css
+++ b/SomeChess/wwwroot/css/site.css
@@ -233,6 +233,7 @@
 }
 .move-history {
     overflow: scroll;
+    height: 53vh;
 }
 .d-block {
     display: block;
@@ -258,7 +259,7 @@
 .movesNotationHolder {
     font-size: 120%;
     color: white;
-}
+} 
     .movesNotationHolder:nth-child(even) {
         background-color: #2c5d63;
     }
@@ -266,9 +267,29 @@
     .movesNotationHolder:nth-child(odd) {
         background-color: rgb(25, 113, 74);
     }
-    .drawButton {
-        background-color: #636363;
+.drawButton {
+    color: white;
+    transition: all 0.7s;
+    width: 5vw;
+    font-size: 125%;
+    background-color: rgb(85, 165, 146);
+    border-radius: 4px;
+}
+    .drawButton:hover {
+        transition: all 0.5s;
+        color: white;
+        background-color: rgb(113, 180, 132);
     }
 .giveUpButton {
-    background-color: red;
+    transition: all 0.7s;
+    color: white;
+    width: 5vw;
+    font-size: 125%;
+    background-color: rgb(85, 165, 146);
+    border-radius: 4px;
 }
+    .giveUpButton:hover {
+        transition: all 0.5s;
+        color: white;
+        background-color: rgb(113, 180, 132);
+    }
