--- a/SomeChess/Components/Chessboard.razor
+++ b/SomeChess/Components/Chessboard.razor
@@ -527,7 +527,7 @@
 }
 
 @code {
-    bool ChoicePeace = true;
+    bool ChoicePeace = false;
     bool GameOver = true;
     string GameWon = "white";
     bool NotNewGame = true;
