--- a/SomeChess/Pages/Index.razor
+++ b/SomeChess/Pages/Index.razor
@@ -8,7 +8,7 @@
 
 </body>
 <div class="flex h-24 justify-center content-center items-center">
-    <h1 class="font-bold text-5xl" style="color: var(--TextColor)">Die beste App für Schach!</h1>
+    <h1 class="font-bold text-5xl" style="color: var(--TextColor)">The best app to play chess!</h1>
 
     <input id="newNameInput" style="margin-left: 20px" name="newNameInput" placeholder="new name" @bind="@NewName"/>
     <button id="submitName" style="margin-left: 20px; color: white; background-color: green; padding: 5px; font-size: 24px; border: 2px solid white; border-radius: 10px" @onclick="() => ChangeUsername()">Apply</button>
