--- a/SomeChess/wwwroot/css/site.css
+++ b/SomeChess/wwwroot/css/site.css
@@ -293,3 +293,6 @@
         color: white;
         background-color: rgb(113, 180, 132);
     }
+    .minusmargintop {
+        margin-top: -6vh;
+    }
